...
            #if !DEBUG
            CommandGroup(after: .appInfo) {
                CheckForUpdatesView(updater: updaterController.updater)
            }
            #endif

            CommandMenu("Evaluation") {
                Button("Show Suite Editor") {
                    store.selection = .suite
                    openWindow(id: "evaluation-main", value: "main")
                }
                .keyboardShortcut("1", modifiers: [.command])

                Button("Show Intent Lab") {
...
